Handles arrays, Infinity, booleans better and added those to the usecase

--- a/usecase.html
+++ b/usecase.html
@@ -25,12 +25,16 @@
     "stuff": [
       {
         "inside": "of an object",
-        "below": "that line"
+        "below": "that line",
+        "length": 10
       },
       {
         "another": "object",
         "with": ["an", "array", 3],
-        "and": 42
+        "and": 42,
+        "is": true,
+        "not": false,
+        "infinite": Infinity
       },
       [
         4,
